// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page component should match snapshot 1`] = `
<Fragment>
  <div
    id="main"
    key="main"
  >
    <Component
      selectedPage="mocked-page"
    />
    <div
      id="page-content"
    />
  </div>
  <Component
    key="footer"
  />
</Fragment>
`;

exports[`Page component should match snapshot with children 1`] = `
<Fragment>
  <div
    id="main"
    key="main"
  >
    <Component
      selectedPage="mocked-page"
    />
    <div
      id="page-content"
    >
      <div>
        Children test component
      </div>
    </div>
  </div>
  <Component
    key="footer"
  />
</Fragment>
`;
